# notes

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  Gemfile  LICENSE  Makefile  README.md  _config.yml  about.md  feed_rss_created.xml  feed_rss_updated.xml  index.md  mkdocs.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: gh-pages.yml
_posts/: 2025-01-15-first-post.md
docs/: about.md  index.md  topics.md  uv_on_macos_for_mle.md
docs/blog/: index.md
docs/blog/posts/: 2024-05-10-orchestrating-lorax-multi-lora.md  2025-04-17-uv-on-macos.md  2025-04-19-setting-up-macbook.md  2025-04-28-scaling-llms.md  2025-05-04-scaling-llms.md  2025-05-06-from-mlops-to-llmops.md  2025-05-07-zshrc-vs-zprofile.md  2025-05-08-guide-pyproject-toml.md  2025-05-10-guide-ai-image-tools.md  2025-05-10-guide-llm-macos-tools.md  2025-05-11-llm-variant-guide.md  2025-05-12-code-snippets.md  2025-06-10-mcp-server-tutorial-with-uv.md  2025-06-12-lorax-serving-guide.md  2025-06-20-lorax-llm-orchestration.md  2025-10-05-context-engineering.md  2025-10-18-domain-driven-design-ai-agents.md  2025-10-20-domain-driven-design-ai-agents.md  2025-10-22-lorax-serving-guide.md  2025-10-27-lorax-serving-guide.md  2025-12-25-schema-guided-reasoning-vllm.md  2026-01-04-finetuning-guide.md  2026-01-09-ecr3-winning-approaches.md  2026-01-11-ecr3-winning-approaches.md  first-post.md  (+5 more)
hooks/: blog_posts_hook.py
overrides/: blog-post.html  main.html
scripts/: run_markdown_examples.py  svg_to_png.py
