[project]
name = "notes"
version = "0.1.0"
description = "Edge of Context blog built with MkDocs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-blog-plugin>=0.25",
    "mkdocs-macros-plugin>=1.4.1",
    "mkdocs-kroki-plugin>=0.9.0",
    "mkdocs-material>=9.5.2",
    "mkdocs-rss-plugin>=1.17.4",
    "pymdown-extensions>=10.15",
]

[dependency-groups]
dev = [
    "pydantic>=2",
]
